<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/serialNO"
        style="@style/textcaption1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:padding="@dimen/size10"
        android:layout_weight="0.5"
        android:text="@string/srno"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productName"
        style="@style/textcaption1"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:padding="@dimen/size10"
        android:text="@string/product_name"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productQty"
        style="@style/textcaption1"
        android:gravity="center"
        android:layout_weight="0.6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:padding="@dimen/size10"
        android:text="@string/qty"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productPrice"
        style="@style/textcaption1"
        android:gravity="center"
        android:layout_weight="0.9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:padding="@dimen/size10"
        android:text="@string/Amount"
        />

</LinearLayout>