<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/size10"
    android:layout_marginEnd="@dimen/size10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.fragment.CartFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/couponAvailTXT"
        style="@style/textBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coupon"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/textHeading6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coupon_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/couponAvailTXT"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/couponApplyBTN"
        style="@style/textcaption1"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/couponAvailTXT"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_add"
        app:iconTint="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/apply_coupon" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderDetails"
        style="@style/textBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order_detail"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    <LinearLayout
        android:id="@+id/mItemsLYT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetails">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mItemCountTXT"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_items"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mItemCount"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:layout_weight="1"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/mPriceLYT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mItemsLYT">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mTotalTXT"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mTotolPrice"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:layout_weight="1"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/mGSTLYT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mPriceLYT">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mTaxTXT"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gst_text"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mGst"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gst"
            android:layout_weight="1"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/mDiscountLYT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mGSTLYT">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mDiscountTXT"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Discount"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mDiscount"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gst"
            android:layout_weight="1"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mDiscountLYT"
        android:layout_marginTop="@dimen/size5"/>

    <LinearLayout
        android:id="@+id/mGrossLYT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mGrossTXT"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gross_total"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mGrossCount"
            style="@style/textBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:layout_weight="1"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/couponApplyBTN"/>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mButtonBuy"
        style="@style/textBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/buy_now"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/size30"
        android:layout_marginTop="@dimen/size30"
        android:layout_marginRight="@dimen/size30"
        android:layout_marginBottom="@dimen/size5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>