<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.fragment.HomeFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRCY"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/cartLYT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cartLYT"
        android:background="@drawable/flat_rounded_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size5"
        android:visibility="gone"
        android:layout_marginStart="@dimen/size10"
        android:layout_marginEnd="@dimen/size10"
        app:layout_constraintBottom_toBottomOf="parent">



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemCount"
            style="@style/textcaption1"
            android:layout_width="wrap_content"
            android:padding="@dimen/size10"
            android:textColor="@color/Primary"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textStyle="bold"
            android:gravity="center"

            />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/Primary"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalPrice"
            style="@style/textcaption1"
            android:layout_width="wrap_content"
            android:padding="@dimen/size10"
            android:textColor="@color/Primary"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:gravity="center"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mProceedOrder"
            style="@style/textSubtitle2"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10"
            android:text="@string/proceed"
            android:gravity="end"
            android:textColor="@color/Primary"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>