<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/size10"
    app:cardBackgroundColor="@color/Primary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productName"
            style="@style/textSubtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10"
            android:text="@string/product_name"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productPrice"
            style="@style/textSubtitle2"
            android:layout_width="match_parent"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content"
            android:text="@string/product_name"

            />




        <LinearLayout
            android:id="@+id/availableLYT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productAvailable"
                style="@style/textBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size10"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_check"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:text="@string/available"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background = "@color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productNotAvailable"
                style="@style/textBody1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/size10"
                android:gravity="center"
                android:drawableTint="@color/white"
                android:drawableEnd="@drawable/ic_baseline_clear"
                android:layout_height="wrap_content"
                android:text="@string/not_available"

                />


        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mTextAvailable"
            style="@style/textSubtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10"
            android:visibility="gone"
            android:text="@string/product_name"
            />

    </LinearLayout>




</com.google.android.material.card.MaterialCardView>